--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "description": "Backend API for Botanica plant store",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
+"scripts": {
+  "start": "node index.js",
+  "dev": "nodemon index.js",
+  "build": "cd ../frontend && npm install && npm run build"
+},
   "dependencies": {
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
