--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# -------------------------
 # Logs
 logs
 *.log
@@ -7,16 +6,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# -------------------------
 # Dependencies
 node_modules/
 
-# -------------------------
 # Environment variables
-.env
-frontend/.env
+.env*
+frontend/.env*
 
-# -------------------------
 # Build / output
 dist/
 build/
@@ -25,12 +21,12 @@ frontend/build/
 .tmp/
 .cache/
 
+# Render
+.render/
 
-# Ignore large installers
+# Installers
 *.exe
 
-
-# -------------------------
 # OS / Editor junk
 .DS_Store
 Thumbs.db
@@ -42,6 +38,5 @@ Thumbs.db
 *.sln
 *.sw?
 
-# -------------------------
 # Coverage reports
 coverage/
