--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
     "apexcharts": "^5.3.4",
+    "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-apexcharts": "^1.7.0",
