--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "description": "Backend API for Botanica plant store",
   "main": "index.js",
   "type": "module",
-"scripts": {
-  "start": "node index.js",
-  "dev": "nodemon index.js",
-  "build": "cd ../frontend && npm install && npm run build"
-},
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "cd ../frontend && npm install && npm run build",
+      "dev:all": "concurrently \"npm run dev\" \"npm run frontend\""
+  },
   "dependencies": {
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
@@ -27,6 +28,7 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "nodemon": "^3.1.0"
   }
 }
